Fixed some problems with the "end turn?" button. However, there is a bug with the red "end turn" button. The second time during the game a red piece jumps, the button doesn't appear

--- a/checkers.css
+++ b/checkers.css
@@ -79,9 +79,7 @@ h2 {
   float: left;
   clear: both;
   width: 10%;
-  margin-left: 400px;
-  margin-right: -540px;
-  background: red;
+  text-shadow: none;
 }
 
 .hidden {
